--- a/html/pom.xml
+++ b/html/pom.xml
@@ -14,6 +14,23 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>html</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>8.1.10.v20130312</version>
+				<configuration>
+					<connectors>
+						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+							<port>7101</port>
+							<maxIdleTime>60000</maxIdleTime>
+						</connector>
+					</connectors>
+					<webapp>
+						<contextPath>/</contextPath>
+					</webapp>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
