--- a/html/pom.xml
+++ b/html/pom.xml
@@ -12,6 +12,11 @@
 			<artifactId>tapestry-core</artifactId>
 			<version>5.3.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.cayenne</groupId>
+			<artifactId>cayenne-server</artifactId>
+			<version>3.2M1.r1479928</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -30,6 +35,25 @@
 						<contextPath>/</contextPath>
 					</webapp>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.cayenne.plugins</groupId>
+				<artifactId>maven-cayenne-plugin</artifactId>
+				<version>3.2M1.r1479928</version>
+				<configuration>
+					<map>${project.basedir}/src/main/resources/datamap.map.xml</map>
+					<destDir>${project.basedir}/src/main/java</destDir>
+					<defaultPackage>com.objectstyle.demo.cayenne</defaultPackage>
+					<superPkg>com.objectstyle.demo.cayenne.auto</superPkg>
+				</configuration>
+				<executions>
+					<execution>
+						<id>default-cli</id>
+						<goals>
+							<goal>cgen</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
