--- a/html/pom.xml
+++ b/html/pom.xml
@@ -23,6 +23,21 @@
 			<version>3.0.0.v201112011016</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-server</artifactId>
+			<version>1.17.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-json</artifactId>
+			<version>1.17.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-servlet</artifactId>
+			<version>1.17.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -42,7 +57,7 @@
 						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
 							<port>7101</port>
 							<maxIdleTime>60000</maxIdleTime>
-							
+
 							<!-- This is needed to work with proxy -->
 							<forwarded>true</forwarded>
 						</connector>
