--- a/html/src/main/webapp/WEB-INF/web.xml
+++ b/html/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,7 @@
 		</init-param>
 		<init-param>
 			<param-name>com.sun.jersey.config.property.packages</param-name>
-			<param-value>com.objectstyle.demo.rest</param-value>
+			<param-value>demo.rest</param-value>
 		</init-param>
 		<init-param>
 			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
