--- a/site/src/main/webapp/WEB-INF/web.xml
+++ b/site/src/main/webapp/WEB-INF/web.xml
@@ -9,12 +9,12 @@
 	</context-param>
 
 	<filter>
-		<filter-name>html</filter-name>
+		<filter-name>site</filter-name>
 		<filter-class>org.apache.tapestry5.TapestryFilter</filter-class>
 	</filter>
 
 	<filter-mapping>
-		<filter-name>html</filter-name>
+		<filter-name>site</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 </web-app>
