--- a/pom.xml
+++ b/pom.xml
@@ -1,81 +1,70 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.objectstyle.demo</groupId>
-		<artifactId>parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
-
-	<artifactId>site</artifactId>
-	<packaging>war</packaging>
-	<name>site webapp</name>
-
+	<groupId>com.objectstyle.demo</groupId>
+	<artifactId>parent</artifactId>
+	<packaging>pom</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>parent-pom</name>
+	<modules>
+		<module>site</module>
+	</modules>
+	<dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.tapestry</groupId>
 			<artifactId>tapestry-core</artifactId>
+			<version>5.3.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cayenne</groupId>
 			<artifactId>cayenne-server</artifactId>
+			<version>3.2M1.r1479928</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty.orbit</groupId>
 			<artifactId>javax.servlet</artifactId>
+			<version>3.0.0.v201112011016</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
+			<version>1.17.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-json</artifactId>
+			<version>1.17.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-servlet</artifactId>
+			<version>1.17.1</version>
 		</dependency>
 	</dependencies>
+	</dependencyManagement>
 	<build>
+		<pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<configuration>
-					<connectors>
-						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-							<port>7101</port>
-							<maxIdleTime>60000</maxIdleTime>
-
-							<!-- This is needed to work with proxy -->
-							<forwarded>true</forwarded>
-						</connector>
-					</connectors>
-					<webapp>
-						<contextPath>/</contextPath>
-					</webapp>
-				</configuration>
+				<version>8.1.10.v20130312</version>
+				<dependencies>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.25</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.cayenne.plugins</groupId>
 				<artifactId>maven-cayenne-plugin</artifactId>
-				<configuration>
-					<map>${project.basedir}/src/main/resources/datamap.map.xml</map>
-					<destDir>${project.basedir}/src/main/java</destDir>
-					<defaultPackage>demo.cayenne</defaultPackage>
-					<superPkg>demo.cayenne.auto</superPkg>
-				</configuration>
-				<executions>
-					<execution>
-						<id>default-cli</id>
-						<goals>
-							<goal>cgen</goal>
-						</goals>
-					</execution>
-				</executions>
+				<version>3.2M1.r1479928</version>
 			</plugin>
 		</plugins>
+		</pluginManagement>
 	</build>
 </project>
