--- a/editor/pom.xml
+++ b/editor/pom.xml
@@ -46,9 +46,9 @@
 							<forwarded>true</forwarded>
 						</connector>
 					</connectors>
-					<webapp>
+					<webApp>
 						<contextPath>/editor</contextPath>
-					</webapp>
+					</webApp>
 				</configuration>
 			</plugin>
 		</plugins>
