--- a/site/pom.xml
+++ b/site/pom.xml
@@ -47,9 +47,9 @@
 							<forwarded>true</forwarded>
 						</connector>
 					</connectors>
-					<webapp>
+					<webApp>
 						<contextPath>/</contextPath>
-					</webapp>
+					</webApp>
 				</configuration>
 			</plugin>
 			<plugin>
