--- a/editor/pom.xml
+++ b/editor/pom.xml
@@ -21,6 +21,10 @@
 			<artifactId>cayenne-server</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.cayenne</groupId>
+			<artifactId>cayenne-lifecycle</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.jetty.orbit</groupId>
 			<artifactId>javax.servlet</artifactId>
 			<scope>provided</scope>
