--- a/services/pom.xml
+++ b/services/pom.xml
@@ -25,6 +25,10 @@
 			<artifactId>cayenne-lifecycle</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.jetty.orbit</groupId>
 			<artifactId>javax.servlet</artifactId>
 			<scope>provided</scope>
