--- a/pom.xml
+++ b/pom.xml
@@ -44,22 +44,37 @@
 				<artifactId>jersey-servlet</artifactId>
 				<version>1.17.1</version>
 			</dependency>
+
+			<!-- These should not be packaged in the webapps. Use "provided" scope 
+				when importing them -->
+			<dependency>
+				<groupId>org.objectstyle</groupId>
+				<artifactId>jetty-launcher</artifactId>
+				<version>1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>5.1.25</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<repositories>
+		<repository>
+			<id>objectstyle</id>
+			<url>http://maven.objectstyle.org/nexus/content/groups/wowodc/</url>
+		</repository>
+	</repositories>
 	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>org.mortbay.jetty</groupId>
-					<artifactId>jetty-maven-plugin</artifactId>
-					<version>8.1.10.v20130312</version>
-					<dependencies>
-						<dependency>
-							<groupId>mysql</groupId>
-							<artifactId>mysql-connector-java</artifactId>
-							<version>5.1.25</version>
-						</dependency>
-					</dependencies>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>1.6</source>
+						<target>1.6</target>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.cayenne.plugins</groupId>
