--- a/site/pom.xml
+++ b/site/pom.xml
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>org.apache.cayenne</groupId>
 			<artifactId>cayenne-server</artifactId>
-			<version>3.2M1.r1486473</version>
+			<version>3.2M1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty.orbit</groupId>
@@ -56,7 +56,7 @@
 			<plugin>
 				<groupId>org.apache.cayenne.plugins</groupId>
 				<artifactId>maven-cayenne-plugin</artifactId>
-				<version>3.2M1.r1486473</version>
+				<version>3.2M1</version>
 				<configuration>
 					<map>${project.basedir}/src/main/resources/datamap.map.xml</map>
 					<destDir>${project.basedir}/src/main/java</destDir>
