--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 			<dependency>
 				<groupId>org.apache.cayenne</groupId>
 				<artifactId>cayenne-server</artifactId>
-				<version>3.2M1.r1486473</version>
+				<version>3.2M1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.cayenne</groupId>
@@ -88,7 +88,7 @@
 				<plugin>
 					<groupId>org.apache.cayenne.plugins</groupId>
 					<artifactId>maven-cayenne-plugin</artifactId>
-					<version>3.2M1.r1486473</version>
+					<version>3.2M1</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
